2008-09-08  Donal K. Fellows  <dkf@users.sf.net>

	* tests/append.test, appendComp.test, cmdAH.test: Use the powers of
	tcltest2 to make these files simpler.

2008-09-07  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclCompile.c (TclCompileTokens):
	* generic/tclExecute.c (CompileExprObj):   fix a perf bug (found by
	Alex Ferrieux) where some variables in the LVT where not being
	accessed by index. Fix missing localCache management in compiled
	expressions found while analyzing the bug.
	
2008-09-07  Miguel Sofer  <msofer@users.sf.net>

	* doc/namespace.n: fix [Bug 2098441]

2008-09-04  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclTrace.test (TraceVarProc):
	* generic/unsupported.test: insure that unset traces are run even
	when the coroutine is unwinding [Bug 2093947]
	
	* generic/tclExecute.c (CACHE_STACK_INFO): 
	* tests/unsupported.test:  restore the execEnv's bottomPtr, fix
	for [Bug 2093188]. 

2008-09-02  Don Porter  <dgp@users.sourceforge.net>

	* generic/tcl.h:	Stripped "callers" of the _ANSI_ARGS_ macro
	* compat/dirent2.h:	to support a TCL_NO_DEPRECATED build.
	* compat/dlfcn.h:
	* unix/tclUnixPort.h:

	* generic/tcl.h:	Removed the conditional #define of
	_ANSI_ARGS_ that would support pre-prototype C compilers.  Since
	_ANSI_ARGS_ is no longer used in tclDecls.h, it's clear no one
	compiling against Tcl 8.5 headers is making use of a -DNO_PROTOTYPES
	configuration.

2008-09-02  Donal K. Fellows  <dkf@users.sf.net>

	* tests/socket.test: Rewrote so as to use tcltest2 better.

2008-09-01  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclCmdAH.c:      nre-enabling [eval]; eval scripts are now
	* generic/tclOOBasic.c:    bytecompiled. Adapted recursion limit tests
	* tests/interp.test:       that were relying on eval not being 
	* tests/nre.test:          compiled. Part of the [Bug 2017632] project.
	* tests/unsupported.test:

2008-09-01  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOOMethod.c (InvokeProcedureMethod): 